# ctd_processing

./: pyproject.toml
src/ctd_processing/: __init__.py  asvp_file.py  ctd_processing_class_diagram.plantuml  metadata.py  modify_cnv.py  standard_format.py  utils.py
src/ctd_processing/processing/: sbe_processing.py  sbe_processing_paths.py
src/ctd_processing/resources/: value_format.txt
src/ctd_processing/tests/: create_asvp_from_cnv.py
src/ctd_processing/visual_qc/: vis_qc.py
