[project]
name = "ctd_processing"
version = "1.0.0"
description = "Python package to process ctd data"
authors = [
    {name = "Magnus Wenzer", email = "nodc@smhi.se"},
]
dependencies = [
    "file-explorer @ git+https://github.com/sharksmhi/file_explorer.git",
    "psutil>=5.9.8",
    "ctdpy @ git+https://github.com/sharksmhi/ctdpy.git@27-refactor",
    "ctdvis @ git+https://github.com/sharksmhi/ctdvis.git@35-refactor",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true


[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mypkg = ["."]