[project]
name = "ctd_processing"
version = "2.0.0"
description = "Python package to process ctd data"
authors = [
    {name = "Magnus Wenzer", email = "nodc@smhi.se"},
]
dependencies = [
    "file-explorer @ git+https://github.com/sharksmhi/file_explorer.git@v1.1.0",
    "psutil>=5.9.8",
    "ctdpy @ git+https://github.com/sharksmhi/ctdpy.git@v1.0.0",
    "ctdvis @ git+https://github.com/sharksmhi/ctdvis.git@v2.0.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true


[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mypkg = ["."]